--- a/.chainlit/config.toml
+++ b/.chainlit/config.toml
@@ -1,5 +1,6 @@
 [project]
 # Whether to enable telemetry (default: true). No personal data is collected.
+name = "Zomato OrderBot"
 enable_telemetry = true
 
 
